samples/_failures_safe/1761723274_416db4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bbd7e901.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_bbd7e901.c:141:16: error: expected declaration or statement at end of input
  141 |         struct matrix sub;
      |                ^~~~~~
./samples/SAFE/__tmp_bbd7e901.c:141:16: error: expected declaration or statement at end of input
